Make sure scrollbars don't show up on demo and tool pages

--- a/demo/client/css/pathfinder.css
+++ b/demo/client/css/pathfinder.css
@@ -1,3 +1,6 @@
+body.pf-unscrollable {
+    overflow: hidden;
+}
 nav {
     -moz-user-select: none;
     user-select: none;
